--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
   <link rel="stylesheet" href="./styles/themify.css">
   <link rel="stylesheet" href="./styles/color.css">
   <link rel="stylesheet" href="./styles/sidebar.css">
+  <link rel="stylesheet" href="./styles/layout.css">
   <link rel="stylesheet" href="./styles/page.css">
   <script src="./scripts/jquery.min.js"></script>
 </head>
 
 <body class="sidebar-container">
-  <section class="sidebar bg-dark" with-backdrop>
+  <section class="sidebar bg-dark scroll-container">
     <i class="sidebar-toggler ti ti-close" data-toggle="sidebar"></i>
-    <div class="sidebar-content">
-      <h2 class="app-brand"><i class="icon ti ti-bolt font-5"></i><b class="label">ADMIN</b></h2>
+    <div class="scrollable">
+      <h2 class="app-brand">
+        <a href="#"><i class="icon ti ti-bolt font-5"></i><b class="label">ADMIN</b></a>
+      </h2>
       <nav class="sidebar-nav">
         <a class="nav-item" href="#"><i class="ti ti-dashboard icon"></i><span class="label">Dashboard</span></a>
         <a class="nav-item" href="#"><i class="ti ti-comment icon"></i><span class="label">Posts</span></a>
@@ -29,11 +32,11 @@
       </nav>
     </div>
   </section>
-  <div class="page-container">
+  <div class="page-container scroll-container">
     <header class="topbar bg-secondary text-white">
       <i class="sidebar-toggler ti ti-menu" data-toggle="sidebar" data-target=".sidebar"></i>
     </header>
-    <div class="page-content bg-white text-center">
+    <div class="page-content scrollable bg-white text-center">
       <i class="ti ti-bolt font-5"></i>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
