Complete Sidebar Tier-1
Sidebar and Page-Container.
Toolbar before page-content

--- a/tier-1/index.html
+++ b/tier-1/index.html
@@ -5,19 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ADMIN | dashboard</title>
+  <title>ADMIN | dashboard (TIER 1)</title>
   <link rel="stylesheet" href="./styles/bootstrap.css">
   <link rel="stylesheet" href="./styles/mdb.css">
   <link rel="stylesheet" href="./styles/themify.css">
   <link rel="stylesheet" href="./styles/color.css">
-  <link rel="stylesheet" href="./styles/sidebar.css">
   <link rel="stylesheet" href="./styles/layout.css">
+  <link rel="stylesheet" href="./styles/sidebar.css">
   <link rel="stylesheet" href="./styles/page.css">
   <script src="./scripts/jquery.min.js"></script>
 </head>
 
 <body class="sidebar-container">
-  <section class="sidebar bg-dark scroll-container">
+  <section class="sidebar scroll-container bg-dark">
     <i class="sidebar-toggler ti ti-close" data-toggle="sidebar"></i>
     <div class="scrollable">
       <h2 class="app-brand">
@@ -32,7 +32,7 @@
       </nav>
     </div>
   </section>
-  <div class="page-container scroll-container">
+  <section class="page-container scroll-container">
     <header class="topbar bg-secondary text-white">
       <i class="sidebar-toggler ti ti-menu" data-toggle="sidebar" data-target=".sidebar"></i>
     </header>
@@ -50,7 +50,7 @@
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
     </div>
-  </div>
+  </section>
   <script src="./scripts/sidebar.js"></script>
 </body>
 
