--- a/tier-1/index.html
+++ b/tier-1/index.html
@@ -33,12 +33,18 @@
     </div>
   </section>
   <section class="page-container scroll-container">
-    <header class="topbar bg-secondary text-white">
+    <header class="topbar text-white">
       <i class="sidebar-toggler ti ti-menu" data-toggle="sidebar" data-target=".sidebar"></i>
+      <span class="app-title mr-auto">Title</span>
+      <button class="btn btn-flat btn-dark ti ti-power-off"></button>
     </header>
     <div class="page-content scrollable bg-white text-center">
       <i class="ti ti-bolt font-5"></i>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
+      <div>
+        <button class="btn btn-success ti ti-check"></button>
+        <button class="btn btn-danger ti ti-close"></button>
+      </div>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
@@ -51,7 +57,7 @@
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
     </div>
   </section>
-  <script src="./scripts/sidebar.js"></script>
+  <script src="./scripts/sidebar.min.js"></script>
 </body>
 
 </html>
