--- a/tier-2/index.html
+++ b/tier-2/index.html
@@ -17,17 +17,19 @@
 </head>
 
 <body class="main-page">
-  <header class="topbar bg-secondary text-white">
+  <header class="topbar text-white">
     <i class="sidebar-toggler ti ti-menu" data-toggle="sidebar" data-target=".sidebar"></i>
+    <span class="app-title mr-auto">Title</span>
+    <button class="btn btn-flat btn-dark ti ti-power-off"></button>
   </header>
   <div class="sidebar-container">
-    <section class="sidebar bg-dark">
+    <section class="sidebar scroll-container bg-dark">
       <i class="sidebar-toggler ti ti-close" data-toggle="sidebar"></i>
-      <div>
+      <div class="scrollable">
         <h2 class="app-brand">
           <a href="#"><i class="icon ti ti-bolt font-5"></i><b class="label">ADMIN</b></a>
         </h2>
-        <nav class="sidebar-nav scrollable">
+        <nav class="sidebar-nav">
           <a class="nav-item" href="#"><i class="ti ti-dashboard icon"></i><span class="label">Dashboard</span></a>
           <a class="nav-item" href="#"><i class="ti ti-comment icon"></i><span class="label">Posts</span></a>
           <a class="nav-item" href="#"><i class="ti ti-user icon"></i><span class="label">Users</span></a>
@@ -36,10 +38,14 @@
         </nav>
       </div>
     </section>
-    <section class="page-container">
+    <section class="page-container scroll-container">
       <div class="page-content scrollable bg-white text-center">
         <i class="ti ti-bolt font-5"></i>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
+        <div>
+          <button class="btn btn-success ti ti-check"></button>
+          <button class="btn btn-danger ti ti-close"></button>
+        </div>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit quam aspernatur earum ipsa, corrupti mollitia placeat in dolorum nostrum itaque aliquid? Reiciendis amet magni sed at dignissimos dicta alias vero.</p>
