--- a/index.html
+++ b/index.html
@@ -13,13 +13,29 @@
   <h1 class="font-lg">Welcome</h1>
   <div class="p-3 flex-buttons">
     <a href="tier-1" class="btn btn-primary">Tier 1</a>
-    <a href="tier-2" class="btn btn-secondary ml-3">Tier 2</a>
+    <a href="tier-2" class="btn btn-secondary">Tier 2</a>
   </div>
   <hr>
   <div class="p-3 flex-buttons">
     <button class="btn btn-primary">Primary</button>
-    <button class="btn btn-warning ml-3">Warning</button>
-    <button class="btn btn-bg-color ml-3">Warning Var</button>
+    <button class="btn btn-outline-primary">Primary Outline</button>
+    <button class="btn btn-g-primary">Primary Gradient</button>
+    <button class="btn btn-transparent">Transparent</button>
+  </div>
+  <div class="card min-w-50">
+    <div class="card-header">
+      <h4 class="card-title">Card Title</h4>
+    </div>
+    <div class="card-body">
+      <i class="fa fa-images font-5"></i>
+      <hr>
+      <p class="text-primary">Content Text</p>
+      <div class="alert alert-muted">
+        <h5>Title</h5>
+        <p>Content Again</p>
+        <button class="btn btn-muted">Muted</button>
+      </div>
+    </div>
   </div>
   <style>
     /* Set variable using HSL
