--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
   <link rel="shortcut icon" href="assets/img/icon.png" type="image/png">
 </head>
 
-<body class="d-flex flex-center section">
+<body class="d-flex flex-center section scroll-container">
   <h1 class="font-lg">Welcome</h1>
-  <div class="p-3 flex-buttons">
+  <div class="p-3 flex-container">
     <a href="tier-1" class="btn btn-primary">Tier 1</a>
     <a href="tier-2" class="btn btn-secondary">Tier 2</a>
   </div>
   <hr>
-  <div class="p-3 flex-buttons">
+  <div class="p-3 flex-container">
     <button class="btn btn-primary">Primary</button>
     <button class="btn btn-outline-primary">Primary Outline</button>
     <button class="btn btn-g-primary">Primary Gradient</button>
     <button class="btn btn-transparent">Transparent</button>
   </div>
-  <div class="card min-w-50">
+  <div class="card flat min-w-50">
     <div class="card-header">
       <h4 class="card-title">Card Title</h4>
     </div>
@@ -30,10 +30,15 @@
       <i class="fa fa-images font-5"></i>
       <hr>
       <p class="text-primary">Content Text</p>
-      <div class="alert alert-muted">
+      <div class="alert alert-muted min-vh-50 scrollable">
         <h5>Title</h5>
         <p>Content Again</p>
         <button class="btn btn-muted">Muted</button>
+        <object data="./assets/svg/params.svg" type="image/svg+xml">
+          <param name="color" value="purple" />
+          <param name="label" value="override" />
+        </object>
+        <object data="./assets/svg/params.svg?color=cornflowerblue&label=fnord" type="image/svg+xml"></object>
       </div>
     </div>
   </div>
