Updated Checkbox Component
Checkbox can now take the current text color set to it.

----
1. Remove boldness from flex-item icon.
2. Fixed btn width on mobile screen /sidebar.scss@299.
3. Using direct font file names on font faces. But font family name remain as - AppTitle and AppContent.
4. Fixed hls lighten and darken level on table even numbers rows.
5. Other Stylings.

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
   </div>
   <div class="card flat min-w-50">
     <div class="card-header">
+      <i class="fa fa-images font-5"></i>
       <h4 class="card-title">Card Title</h4>
     </div>
     <div class="card-body">
-      <i class="fa fa-images font-5"></i>
       <hr>
       <p class="text-primary">Content Text</p>
       <div class="alert alert-muted min-vh-50 scrollable">
         <h5>Title</h5>
         <p>Content Again</p>
-        <button class="btn btn-muted">Muted</button>
+        <input type="checkbox" class="text-secondary">
         <object data="./assets/svg/params.svg" type="image/svg+xml">
           <param name="color" value="purple" />
           <param name="label" value="override" />
