Added Mixins File
Changes _variable file to mixins.

- Added a variables file.
- Updated .img-bg class
- Updated table-container component.

Other Stylings, Refactoring.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,13 @@
         <div class="alert alert-muted min-vh-50 scrollable">
           <h5>Title</h5>
           <p>Content Again</p>
-          <input type="checkbox" class="text-secondary">
+          <input type="checkbox" class="text-primary">
+          <input type="checkbox" class="text-secondary switch">
+          <label class="checkbox justify-content-center d-inline-flex">
+            <input type="checkbox" class="text-color-1" />
+            <span class="label off">Off</span>
+            <span class="label">On</span>
+          </label>
           <hr>
           <label class="input-container" data-label="Title">
             <input type="text" value="Hi" placeholder="Please enter a title">
