--- a/src/pages/sidemenu/flex.html
+++ b/src/pages/sidemenu/flex.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <base href="../">
+  <base href="/dist">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +13,10 @@
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
 </head>
 
-<body class="sidemenu-container">
+<body class="main-menu-container">
   <input type="checkbox" id="main-menu-trigger" class="main-menu-trigger">
-  <div class="sidemenu bg-secondary is-blur">
-    <div class="sidemenu-header">
+  <div class="side-menu bg-secondary is-blur">
+    <div class="side-menu-header">
       <label for="main-menu-trigger" class="bi bi-list main-menu-toggle"></label>
     </div>
   </div>
