feat: main menu logo alternation
can now switch main menu logo according to checked state and screen size

add: tailwindcss
update: changed official logos & icons

--- a/src/pages/sidemenu/flex.html
+++ b/src/pages/sidemenu/flex.html
@@ -24,7 +24,7 @@
     <div class="page-content">
       <div class="app-header sticky">
         <label for="main-menu-trigger" class="bi bi-list main-menu-toggle"></label>
-        <img src="assets/img/logo.png" alt="" class="app-logo">
+        <img src="assets/img/logo.png" alt="" class="main-logo">
       </div>
       <section>
         <h1>VX Dashboard Sidemenu</h1>
