upgrade: Side Menu
update:  menu-logo switching
fix: flipped minimized state
> Above tablet minimized when checked
> On tablet minimized when unchecked (Default state)
chores: removed unnecessary  padding
rename: src/style - app.scss -> main.scss

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VX Dashboard</title>
+  <link rel="stylesheet" href="css/external/bootstrap.css">
   <link rel="stylesheet" href="css/index.css">
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
   <script>
@@ -19,7 +20,6 @@
       <a href="pages/tier-1" class="btn btn-primary">Tier 1</a>
       <a href="pages/tier-2" class="btn btn-secondary">Tier 2</a>
       <a href="pages/sidemenu" class="btn btn-accent">Sidemenu</a>
-      <a href="pages/fulmenu" class="btn btn-color-1">Fullmenu</a>
     </div>
     <hr>
     <div class="p-3 flex-container">
