feat: Float Menu
completed all 3 major menus.
- side, full & float
handle all with the screens & behaviors

added: `menu-container`
> Used to hold navigator and toggler
refactor: menu-logo switch
> Using a simple logic of displaying
intg: AlpineJs for easy templating
refactor: removed all `!important` specifications
chores: removed unnecessary styles

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,10 @@
   <section class="flex-center">
     <h1 class="font-lg">Welcome</h1>
     <div class="p-3 flex-container">
-      <a href="pages/tier-1" class="btn btn-primary">Tier 1</a>
-      <a href="pages/tier-2" class="btn btn-secondary">Tier 2</a>
-      <a href="pages/sidemenu" class="btn btn-accent">Sidemenu</a>
+      <a href="pages/tier-1" class="btn btn-primary">tier 1</a>
+      <a href="pages/tier-2" class="btn btn-secondary">tier 2</a>
+      <a href="pages/sidemenu" class="btn btn-accent">sidemenu</a>
+      <a href="pages/fullmenu" class="btn btn-accent">fullmenu</a>
     </div>
     <hr>
     <div class="p-3 flex-container">
