--- a/src/index.html
+++ b/src/index.html
@@ -17,34 +17,33 @@
   <section class="flex-center">
     <h1 class="font-lg">Welcome</h1>
     <div class="p-3 flex-container">
-      <a href="pages/tier-1" class="btn btn-primary">tier 1</a>
-      <a href="pages/tier-2" class="btn btn-secondary">tier 2</a>
-      <a href="pages/sidemenu" class="btn btn-accent">sidemenu</a>
-      <a href="pages/fullmenu" class="btn btn-accent">fullmenu</a>
+      <a href="pages/tier-1" class="button bg-primary">tier 1</a>
+      <a href="pages/tier-2" class="button bg-secondary">tier 2</a>
+      <a href="pages/menu" class="button bg-accent">menu</a>
     </div>
     <hr>
     <div class="p-3 flex-container">
-      <button class="btn btn-primary" onclick="window.postMessage('Hello from VX Dashboard', '*')">Primary</button>
-      <button class="btn btn-outline-primary">Primary Outline</button>
-      <button class="btn btn-g-primary">Primary Gradient</button>
-      <button class="btn btn-transparent">Transparent</button>
+      <button class="bg-primary" onclick="window.postMessage('Hello from VX Dashboard', '*')">Primary</button>
+      <button class="bg-outline-primary">Primary Outline</button>
+      <button class="bg-g-primary">Primary Gradient</button>
+      <button class="bg-transparent">Transparent</button>
     </div>
     <div class="p-3 flex-container">
-      <button class="btn btn-secondary" onclick="window.postMessage('Hello from VX Dashboard', '*')">Secondary</button>
-      <button class="btn btn-outline-secondary">Secondary Outline</button>
-      <button class="btn btn-g-secondary">Secondary Gradient</button>
-      <button class="btn btn-transparent">Transparent</button>
+      <button class="bg-secondary" onclick="window.postMessage('Hello from VX Dashboard', '*')">Secondary</button>
+      <button class="bg-outline-secondary">Secondary Outline</button>
+      <button class="bg-g-secondary">Secondary Gradient</button>
+      <button class="bg-transparent">Transparent</button>
     </div>
     <div class="p-3 flex-container">
-      <button class="btn btn-accent" onclick="window.postMessage('Hello from VX Dashboard', '*')">Accent</button>
-      <button class="btn btn-outline-accent">Accent Outline</button>
-      <button class="btn btn-g-accent">Accent Gradient</button>
-      <button class="btn btn-transparent">Transparent</button>
+      <button class="bg-accent" onclick="window.postMessage('Hello from VX Dashboard', '*')">Accent</button>
+      <button class="bg-outline-accent">Accent Outline</button>
+      <button class="bg-g-accent">Accent Gradient</button>
+      <button class="bg-transparent">Transparent</button>
     </div>
   </section>
   <section class="grid">
     <div id="grid-item" class="grid-item"></div>
-    <button type="button" class="btn btn-primary" onclick="addItem">Add Item</button>
+    <button type="button" class="bg-primary" onclick="addItem">Add Item</button>
   </section>
   <section class="bg-primary">
     <div class="tabs tabs-white">
@@ -102,41 +101,26 @@
       <table>
         <thead>
           <tr>
-            <th>Header 1</th>
-            <th>Header 2</th>
-            <th>Header 3</th>
-            <th>Header 4</th>
-            <th>Header 5</th>
-            <th>Header 6</th>
+            <template x-for="(_,col) in Array(6)">
+              <th x-text="`Header ${k+1}`"></th>
+            </template>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Row 1, Col 1</td>
-            <td>Row 1, Col 2</td>
-            <td>Row 1, Col 3</td>
-            <td>Row 1, Col 4</td>
-            <td>Row 1, Col 5</td>
-            <td>Row 1, Col 6</td>
-          </tr>
-          <tr>
-            <td>Row 2, Col 1</td>
-            <td>Row 2, Col 2</td>
-            <td>Row 2, Col 3</td>
-            <td>Row 2, Col 4</td>
-            <td>Row 2, Col 5</td>
-            <td>Row 2, Col 6</td>
-          </tr>
-          <tr>
-            <td>Row 3, Col 1</td>
-            <td>Row 3, Col 2</td>
-            <td>Row 3, Col 3</td>
-            <td>Row 3, Col 4</td>
-            <td>Row 3, Col 5</td>
-            <td>Row 3, Col 6</td>
-          </tr>
+          <template x-for="(_,row) in Array(4)">
+            <tr>
+              <template x-for="(_,col) in Array(6)">
+                <th x-text="`Row ${row+1}, Col ${col+1}`"></th>
+              </template>
+            </tr>
+          </template>
         </tbody>
       </table>
+    </div>
+  </section>
+  <section>
+    <h3>Cards</h3>
+    <div class="card">
     </div>
   </section>
   <section>
