--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>VX Dashboard</title>
   <link rel="stylesheet" href="css/external/bootstrap.css">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/fonts.css">
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
   <script>
     window.postMessage('Hello from VX Dashboard', '*')
@@ -15,7 +16,7 @@
 
 <body>
   <section class="flex-center">
-    <h1 class="font-lg">Welcome</h1>
+    <h1>Welcome</h1>
     <div class="p-3 flex-container">
       <a href="pages/tier-1" class="button bg-primary">tier 1</a>
       <a href="pages/tier-2" class="button bg-secondary">tier 2</a>
@@ -173,15 +174,6 @@
     }
   </script>
   <style>
-    /* Set variable using HSL */
-    /* :root {
-      --secondary: #FFFFFF;
-      --secondary-hs: 0deg, 0%;
-      --secondary-l: 75%;
-      --secondary-c: #333333;
-      --secondary-a: 1;
-    } */
-
     section {
       min-height: 50vh;
     }
