--- a/src/pages/menu/index.html
+++ b/src/pages/menu/index.html
@@ -19,95 +19,59 @@
   <!-- <script src="js/alpine" defer></script> -->
 </head>
 
-<body class="main-menu-container" :class="container" x-data="{type:'side-menu', container:'grid', mini: true, active: false, flat: false}">
+<body class="main-menu-container" :class="container" x-data="{type:'side-menu', container:'grid', mini: true, removed:false, active: false, flat: false}">
   <input type="checkbox" id="main-menu-trigger" class="main-menu-trigger" x-model="active">
-  <menu :class="`main-menu bg-primary ${type} ${mini ? 'mini':'max'}`">
-    <nav class="menu-snap bg-text text-black">
-      <template x-for="() in 5">
-        <img src="assets/img/icon.png" class="item icon" alt="icon">
-      </template>
-    </nav>
-    <div class="menu-container p-1 rounded-2 bg-inherit">
-      <header class="menu-header">
-        <img src="assets/img/logo.png" class="main-logo menu-logo silhouette" alt="icon">
-        <img src="assets/img/icon.png" class="main-logo menu-logo-alt" alt="icon-alt">
-      </header>
-      <nav>
-        <template x-for="(v,k) of {flex:'bounding-box', grid: 'grid'}">
-          <label class="item" :class="{active: k === container}" :title="k">
-            <i :class="`icon bi bi-${v}`"></i>
-            <input type="radio" name="container" :value="k" x-model="container" hidden>
-            <span class="label" x-text="k"></span>
-          </label>
+  <template x-if="!removed">
+    <menu :class="`main-menu bg-primary ${type} ${mini ? 'mini':'max'}`">
+      <nav class="menu-snap bg-text text-black">
+        <template x-for="() in 5">
+          <img src="assets/img/icon.png" class="item icon" alt="icon">
         </template>
-        <divider></divider>
-        <template x-for="(v,k) of {
-          'full-menu':'window-fullscreen',
-          'float-menu':'menu-up',
-          'side-menu':'layout-sidebar',
-        }">
-          <label class="item" :class="{active: k === type}" :title="k">
-            <i :class="`icon bi bi-${v}`"></i>
-            <input type="radio" name="type" :value="k" x-model="type" hidden>
-            <span class="label" x-text="k"></span>
-          </label>
-        </template>
-        <button class="bg-green item"><i class="icon bi bi-check"></i><span class="label">Activate</span></button>
-        <button class="bg-blue item"><i class="icon bi bi-share"></i><span class="label">Share</span></button>
-        <button class="bg-white item"><i class="icon bi bi-person"></i><span class="label">Account</span></button>
       </nav>
-      <label for="main-menu-trigger" class="bi bi-list main-menu-toggle icon border bg-text p-2 m-auto rounded-circle align-self-center" />
-    </div>
-  </menu>
-  <template x-if="flat">
-    <header class="p-3 bg-white"><img class="sq-2 ml-auto" src="assets/img/avatar.svg" alt="P"></header>
-  </template>
-  <main>
-    <template x-if="!flat">
-      <header class="p-3 bg-white"><img class="sq-2 ml-auto" src="assets/img/avatar.svg" alt="P"></header>
-    </template>
-    <section>
-      <h1 x-text="`VX Dashboard ${type}`"></h1>
-      <menu>
-        <div class="tabs tabs-primary md">
-          <label>
-            <input class="default" type="checkbox" name="flat" x-model="flat">
-            <span class="label" x-text="`Flat: ${flat}`"></span>
-          </label>
-        </div>
-        <div class="tabs tabs-secondary prefill">
+      <div class="menu-container p-1 rounded-2 bg-inherit">
+        <header class="menu-header">
+          <img src="assets/img/logo.png" class="main-logo menu-logo silhouette" alt="icon">
+          <img src="assets/img/icon.png" class="main-logo menu-logo-alt" alt="icon-alt">
+        </header>
+        <nav>
           <template x-for="(v,k) of {flex:'bounding-box', grid: 'grid'}">
-            <label class="tab" :class="{active: k === container}" :title="k">
+            <label class="item" :class="{active: k === container}" :title="k">
               <i :class="`icon bi bi-${v}`"></i>
               <input type="radio" name="container" :value="k" x-model="container" hidden>
               <span class="label" x-text="k"></span>
             </label>
           </template>
+          <divider></divider>
           <template x-for="(v,k) of {
-              'full-menu':'window-fullscreen',
-              'float-menu':'menu-up',
-              'side-menu':'layout-sidebar',
-            }">
-            <label class="tab" :class="{active: k === type}" :title="k">
+            'full-menu':'window-fullscreen',
+            'float-menu':'menu-up',
+            'side-menu':'layout-sidebar',
+          }">
+            <label class="item" :class="{active: k === type}" :title="k">
               <i :class="`icon bi bi-${v}`"></i>
               <input type="radio" name="type" :value="k" x-model="type" hidden>
               <span class="label" x-text="k"></span>
             </label>
           </template>
-        </div>
-        <label class="item gap-1 checkbox">
-          <input class="default" type="checkbox" name="mini" x-model="mini">
-          <span class="label">Mini</span>
-        </label>
-        <label class="item gap-1 checkbox">
-          <input class="default" type="checkbox" name="menu" x-model="active">
-          <span class="label">Toggle Menu</span>
-        </label>
-      </menu>
-      <template x-for="(v,k) in Array(10)">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </template>
-    </section>
+          <button class="bg-green item"><i class="icon bi bi-check"></i><span class="label">Activate</span></button>
+          <button class="bg-blue item"><i class="icon bi bi-share"></i><span class="label">Share</span></button>
+          <button class="bg-white item"><i class="icon bi bi-person"></i><span class="label">Account</span></button>
+        </nav>
+        <label for="main-menu-trigger" class="bi bi-list main-menu-toggle icon border bg-text p-2 rounded-circle" />
+      </div>
+    </menu>
+  </template>
+  <template x-if="flat">
+    <header class="p-3 bg-white"><img class="sq-2 ml-auto" src="assets/img/avatar.svg" alt="P"></header>
+  </template>
+  <template x-else>Else</template>
+  <main>
+    <template x-if="!flat">
+      <header class="p-3 bg-white"><img class="sq-2 ml-auto" src="assets/img/avatar.svg" alt="P"></header>
+    </template>
+    <template x-for="(v,k) in Array(10)">
+      <section>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</section>
+    </template>
     <template x-if="!flat">
       <footer>All rights reserved</footer>
     </template>
@@ -115,6 +79,91 @@
   <template x-if="flat">
     <footer>All rights reserved</footer>
   </template>
+  <menu id="menu" class="float-menu bg-primary">
+    <nav>
+      <template x-for="(v,k) of {flex: 'bounding-box', grid: 'grid'}">
+        <label class="item" :class="{active: k === container}" :title="k">
+          <i :class="`icon bi bi-${v}`"></i>
+          <input type="radio" name="container" :value="k" x-model="container" hidden>
+          <span class="label" x-text="k"></span>
+        </label>
+      </template>
+      <template x-for="(v,k) of {
+                    'full-menu':'window-fullscreen',
+                    'float-menu':'menu-up',
+                    'side-menu':'layout-sidebar',
+                  }">
+        <label class="item" :class="{active: k === type}" :title="k">
+          <i :class="`icon bi bi-${v}`"></i>
+          <input type="radio" name="type" :value="k" x-model="type" hidden>
+          <span class="label" x-text="k"></span>
+        </label>
+      </template>
+      <label for="main-menu-trigger" class="bi bi-list icon" />
+    </nav>
+    <div class="flex">
+      <label class="item gap-1 checkbox">
+        <input class="default" type="checkbox" name="flat" x-model="flat">
+        <span class="label">Flat</span>
+      </label>
+      <label class="item gap-1 checkbox">
+        <input class="default" type="checkbox" name="mini" x-model="mini">
+        <span class="label">Mini</span>
+      </label>
+      <label class="item gap-1 checkbox">
+        <input class="default" type="checkbox" name="menu" x-model="active">
+        <span class="label">Toggle Menu</span>
+      </label>
+      <label class="item gap-1 checkbox">
+        <input class="default" type="checkbox" name="remove_menu" x-model="removed">
+        <span class="label">Remove Menu</span>
+      </label>
+    </div>
+  </menu>
+  <style>
+    menu#menu {
+      position: fixed;
+      margin: 1rem;
+      right: 0;
+      border-radius: 0.25rem;
+      box-shadow: 0 0 10px -5px black;
+      transition: opacity 0.25s;
+      z-index: 1;
+    }
+
+    menu#menu:not(:hover) {
+      opacity: 0.125;
+    }
+
+    menu#menu nav,
+    menu#menu .flex {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.25rem;
+    }
+
+    menu#menu .flex {
+      padding: 0.5rem;
+      justify-content: space-between;
+    }
+
+    menu#menu nav .item {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      border-radius: 0.25rem;
+      padding: 0.5rem;
+    }
+
+    menu#menu .item.active {
+      background-color: var(--secondary);
+      color: var(--secondary-c);
+    }
+
+    section {
+      min-height: 50dvh;
+    }
+  </style>
 </body>
 
 </html>
